tests/errors/test_11.x
// If conditional is not boolean

fn main() -> void {

    if 1 {
        outI64(1);
    }

    if 'c' {
      outI64(1);
    }

}